[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/ArialBlackBig.tres" type="DynamicFont" id=1]
[ext_resource path="res://Sprites/Level/ButtonPressed.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Level/Button.png" type="Texture" id=3]
[ext_resource path="res://GUI/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://GUI/CloseButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://GUI/BlackSlideOut.tscn" type="PackedScene" id=6]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorBackground" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.654902, 0.309804, 0.203922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -444.5
margin_top = 120.0
margin_right = 444.5
margin_bottom = 301.0
custom_fonts/font = ExtResource( 1 )
text = "STRANTEGO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -305.0
margin_top = -116.0
margin_right = 305.0
margin_bottom = 116.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" parent="." instance=ExtResource( 5 )]

[node name="BlackSlideOut" parent="." instance=ExtResource( 6 )]

[node name="BlackScreenTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="pressed" from="StartButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="timeout" from="BlackScreenTimer" to="." method="_on_BlackScreenTimer_timeout"]
